--- a/index.ipynb
+++ b/index.ipynb
@@ -249,7 +249,7 @@
    },
    "outputs": [],
    "source": [
-    "\"art.vandelay@vandelay.co\".str # False"
+    "\"art.vandelay@vandelay.co\".str(b) # False"
    ]
   },
   {
