--- a/index.ipynb
+++ b/index.ipynb
@@ -259,7 +259,7 @@
     }
    ],
    "source": [
-    "\"art.vandelay@vandelay.co\"ends # False"
+    "\"art.vandelay@vandelay.co\".endswith(.com) # False"
    ]
   },
   {
