--- a/index.ipynb
+++ b/index.ipynb
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
@@ -278,10 +278,10 @@
     {
      "data": {
       "text/plain": [
-       "'vandelay.comwww.'"
+       "'www.vandelay.com'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,7 +312,7 @@
    },
    "outputs": [],
    "source": [
-    "\"7285553334\" # 7285553335"
+    "\"7285553334 # 7285553335"
    ]
   },
   {
